Group 6/Week 04/Seminar 04/Examples/Compilation_errors/syntaxErrors.cpp
clas A {}; // clas instead of class, syntax error

int main() {
    int x = 5 // syntax error, missing ';'
}
